--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,10 @@ docs/
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
-.idea
+.idea/
 *.iml
 *.swp
+.idea/*.xml
 
 # AWS User-specific
 .idea/**/aws.xml
