--- a/build.xml
+++ b/build.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" ?>
-<project name="Hackermen" default="jarfile">
+
+<project name="Unknown_Virus" default="jarfile">
 
     <!-- Initialize build properties  -->
     <target name="init" description="Initializes properties">
-        <property name="project.name" value="Hackermen" />
+        <property name="project.name" value="Unknown_Virus" />
         <property name="src.dir" value="src" />
         <property name="main.class" value="org.academiadecodigo.cunnilinux.hackermen.Main" />
         <property name="build.dir" value="build" />
@@ -14,12 +15,6 @@
             <fileset dir="${lib.dir}" includes="**/*.jar" />
         </path>
     </target>
-
-    <!-- Removes the build directory
-    <target name="clean" description="Clean up project" depends="init">
-        <delete dir="${build.dir}" />
-    </target>
-    -->
 
     <!-- Creates the build directories to hold JAR and Class files -->
     <target name="prepare" description="Creates the build and classes directories" depends="init">
@@ -48,10 +43,8 @@
     </target>
 
     <!-- Removes the build directory -->
-    <!--
-    <target name="final_clean" description="Clean up project" depends="jarfile">
+    <target name="clean" description="Clean up project" depends="jarfile">
         <delete dir="${build.dir}" />
     </target>
-    -->
 
 </project>
